--- a/app/package.json
+++ b/app/package.json
@@ -35,6 +35,7 @@
 		"@project-serum/anchor": "^0.18.0",
 		"@solana/wallet-adapter-base": "^0.7.0",
 		"@solana/wallet-adapter-wallets": "^0.11.1",
-		"@solana/web3.js": "^1.30.2"
+		"@solana/web3.js": "^1.30.2",
+		"buffer": "^6.0.3"
 	}
 }
