--- a/app/package.json
+++ b/app/package.json
@@ -26,9 +26,10 @@
     "svelte": "^3.42.6",
     "svelte-check": "^2.2.6",
     "svelte-preprocess": "^4.9.8",
+    "svelte2tsx": "^0.4.8",
     "tailwindcss": "^2.2.16",
     "tslib": "^2.3.1",
-    "typescript": "^4.4.3"
+    "typescript": "^4.4.4"
   },
   "type": "module",
   "dependencies": {
