--- a/Anchor.toml
+++ b/Anchor.toml
@@ -1,5 +1,5 @@
 [programs.localnet]
-p0001 = "DbwyCYv83xm4TvTNtUFp8LwtKFtwaKK4P1HcDjAktoLb"
+todo = "DbwyCYv83xm4TvTNtUFp8LwtKFtwaKK4P1HcDjAktoLb"
 
 [registry]
 url = "https://anchor.projectserum.com"
